[package]
name = "hyper-timeout"
version = "0.3.1"
authors = ["Herman J. Radtke III <herman@hermanradtke.com>"]
description = "A connect, read and write timeout aware connector to be used with hyper Client."
license = "MIT/Apache-2.0"
documentation = "https://github.com/hjr3/hyper-timeout"
homepage = "https://github.com/hjr3/hyper-timeout"
repository = "https://github.com/hjr3/hyper-timeout"
edition = "2018"

[badges]
travis-ci = { repository = "https://github.com/hjr3/hyper-timeout", branch = "master" }

[dependencies]
hyper = { version = "0.14.0-dev", default-features = false, features = ["client", "tcp"] }
tokio = "0.3"
tokio-io-timeout = "0.5"

[dev-dependencies]
hyper-tls = "0.4"
tokio = { version = "0.3", features = ["io-util", "io-std", "macros", "rt-multi-thread"] }

[patch.crates-io]
hyper = { git = "https://github.com/hyperium/hyper.git" }
hyper-tls = { git = "https://github.com/messense/hyper-tls.git", branch = "bump-tokio" }
