[package]
name = "hyper-timeout"
version = "0.3.1"
authors = ["Herman J. Radtke III <herman@hermanradtke.com>"]
description = "A connect, read and write timeout aware connector to be used with hyper Client."
license = "MIT/Apache-2.0"
documentation = "https://github.com/hjr3/hyper-timeout"
homepage = "https://github.com/hjr3/hyper-timeout"
repository = "https://github.com/hjr3/hyper-timeout"
edition = "2018"

[badges]
travis-ci = { repository = "https://github.com/hjr3/hyper-timeout", branch = "master" }

[dependencies]
hyper = { version = "0.14.2", default-features = false, features = ["client"] }
pin-project = "1"
tokio = "1"
tokio-io-timeout = "1.0.1"

[dev-dependencies]
hyper = { version = "0.14", features = ["http1"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["io-util", "io-std", "macros", "rt-multi-thread"] }
